--- a/pages/faq.html
+++ b/pages/faq.html
@@ -94,8 +94,21 @@
           <div id="accordion">
             <div class="card">
               <div class="card-header">
-                <a class="collapsed card-link" data-toggle="collapse" href="#collapseOne">
-                    هزینه ای درمانیتو برای پیدا کردن دارو دریافت میکنه؟
+                <a class="collapsed card-link" data-toggle="collapse" href="#collapseOne" >
+                  <div class="icon">
+                    <svg class="ham hamRotate ham1" viewBox="0 0 100 100" width="2.5em" onclick="this.classList.toggle('active')">
+                      <path
+                            class="line top"
+                            d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
+                      <path
+                            class="line middle"
+                            d="m 30,50 h 40" />
+                      <path
+                            class="line bottom"
+                            d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
+                    </svg>
+                  </div>
+                  هزینه ای درمانیتو برای پیدا کردن دارو دریافت میکنه؟
                 </a>
               </label>
               </div>
@@ -109,6 +122,19 @@
             <div class="card">
               <div class="card-header">
                 <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo" >
+                  <div class="icon">
+                    <svg class="ham hamRotate ham1" viewBox="0 0 100 100" width="2.5em" onclick="this.classList.toggle('active')">
+                      <path
+                            class="line top"
+                            d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
+                      <path
+                            class="line middle"
+                            d="m 30,50 h 40" />
+                      <path
+                            class="line bottom"
+                            d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
+                    </svg>
+                  </div>
                   هزینه ای درمانیتو برای پیدا کردن دارو دریافت میکنه؟
                 </a>
               </div>
@@ -122,6 +148,19 @@
             <div class="card">
               <div class="card-header">
                 <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                  <div class="icon">
+                    <svg class="ham hamRotate ham1" viewBox="0 0 100 100" width="2.5em" onclick="this.classList.toggle('active')">
+                      <path
+                            class="line top"
+                            d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
+                      <path
+                            class="line middle"
+                            d="m 30,50 h 40" />
+                      <path
+                            class="line bottom"
+                            d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
+                    </svg>
+                  </div>
                   درمانیتو فقط در تهران و کرج فعال هست؟
                 </a>
               </div>
@@ -134,6 +173,19 @@
             <div class="card">
               <div class="card-header">
                 <a class="collapsed card-link" data-toggle="collapse" href="#collapseFour">
+                  <div class="icon">
+                    <svg class="ham hamRotate ham1" viewBox="0 0 100 100" width="2.5em" onclick="this.classList.toggle('active')">
+                      <path
+                            class="line top"
+                            d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
+                      <path
+                            class="line middle"
+                            d="m 30,50 h 40" />
+                      <path
+                            class="line bottom"
+                            d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
+                    </svg>
+                  </div>
                   هزینه ای درمانیتو برای پیدا کردن دارو دریافت میکنه؟
                 </a>
               </div>
