--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <li class="nav-item"><a class="nav-link custom-nav-large" href="#">عضویت داروخانه ها</a></li>
                 </ul>
             </div>
-            <div class="col-sm-8 d-block d-sm-none">
+            <div class="col-sm-8 d-block d-sm-none ">
                 <nav class="navbar navbar-expand-sm">
                     <!-- Toggler/collapsibe Button -->
-                    <button class="navbar-toggler text-right btn-sm " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                      <i class="fa fa-bars" style="color:black;"></i>
+                    <button class="navbar-toggler btn-sm " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <i class="fa fa-bars " style="color:black;"></i>
                     </button>
                   
                     <!-- Navbar links -->
@@ -55,14 +55,14 @@
                           <a class="nav-link custom-nav-small" href="#">قوانین و شرایط</a>
                         </li>
                         <li>
-                            <button type="button" class="btn  btn-primary" >دانلود مستقیم درمانیتو</button>
+                            <button type="button" class="btn  btn-primary " >دانلود مستقیم درمانیتو</button>
                         </li>
                       </ul>
                     </div>
                   </nav>
 			</div>
 			<div class="col-sm-2 d-none d-sm-block" >
-                <button type="button" class="btn  btn-primary mt-2" >دانلود درمانیتو</button>
+                <button type="button" class="btn btn-primary mt-2" >دانلود درمانیتو</button>
             </div>
             
         </div>
